--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".address_page.AddressActivity">
+
     <androidx.fragment.app.FragmentContainerView
 
         android:id="@+id/fragmentAddressBook"
@@ -13,5 +14,8 @@
         android:layout_height="match_parent"
 
         app:defaultNavHost="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/address_graph" />
 </androidx.constraintlayout.widget.ConstraintLayout>
