--- a/app/src/main/res/layout/activity_prescription_cam.xml
+++ b/app/src/main/res/layout/activity_prescription_cam.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Upload_Prescription.prescription_cam">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Button"
+        android:text="Camera"
+        android:textAllCaps="false"
+        android:backgroundTint="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
