--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -63,30 +63,30 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
+                            android:layout_weight="1"
                             android:gravity="center"
                             android:text="User Name"
                             android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
-                            android:textFontWeight="1"
                             android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/text_email"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:gravity="center"
                             android:text="User Email"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
-                            android:textFontWeight="1"
                             android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/text_gender"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:gravity="center"
                             android:text="gender"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
-                            android:textFontWeight="1"
                             android:visibility="gone" />
 
                         <View
@@ -102,7 +102,7 @@
                             android:gravity="center"
                             android:text="Mobile Number"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
-                            android:textFontWeight="1" />
+                            android:layout_weight="1" />
 
                     </LinearLayout>
 
@@ -111,6 +111,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
                         android:src="@drawable/edit"
                         android:tint="@color/cyan_800"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -234,11 +236,25 @@
             android:layout_margin="10sp"
             android:drawablePadding="20dp"
             android:fontFamily="@font/work_sans_semibold"
-            android:text="Need help?"
+            android:text="Need help ?"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:drawableLeftCompat="@drawable/ic_baseline_help_24" />
+
+        <TextView
+            android:id="@+id/aboutus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawablePadding="5dp"
+            android:fontFamily="@font/work_sans_semibold"
+            android:text="About us"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:drawablePadding="20dp"
+            app:drawableStartCompat="@drawable/info" />
 
         <View
             android:id="@+id/divider"
