--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".homepage"
-    android:id="@+id/homepage">
 
-    <ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:scrollbarThumbHorizontal="@color/transparent"
         android:scrollbarThumbVertical="@color/transparent"
+        tools:context=".homepage"
+        android:id="@+id/homepage"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,13 +42,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/home_user_phn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/ibm_bold"
-                android:inputType="textPersonName"
                 android:text="@string/username"
                 android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -119,7 +115,7 @@
                         app:cornerRadius="20dp"
                         tools:ignore="TextContrastCheck" />
 
-                    <TextView
+                    <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -129,7 +125,7 @@
                         android:text="@string/orderbyprescription"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
-                        android:textSize="20dp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/textView"
                         app:layout_constraintEnd_toStartOf="@+id/homeupload"
@@ -153,7 +149,7 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
-            <androidx.recyclerview.widget.RecyclerView
+            <!--<androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_id"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -162,7 +158,7 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view" />
+                app:layout_constraintTop_toBottomOf="@+id/view" />-->
 
 
             <com.denzcoskun.imageslider.ImageSlider
@@ -190,12 +186,9 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:padding="15dp"
                 app:cardCornerRadius="15dp"
-                app:layout_constraintBottom_toTopOf="@id/products"
-                app:layout_constraintEnd_toStartOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view">
 
                 <LinearLayout
@@ -210,7 +203,7 @@
 
                         <TextView
                             android:id="@+id/allcategories2"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/ibm_bold"
@@ -219,7 +212,7 @@
                             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                             android:textColor="@android:color/black" />
 
-                        <TextView
+                        <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/allcategories"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -273,7 +266,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageButton
+                    <androidx.appcompat.widget.AppCompatImageButton
                         android:id="@+id/showallproducts"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -354,6 +347,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </ScrollView>
+</ScrollView>
 
-</FrameLayout>
+
+
