--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="@color/white"
-        app:liftOnScroll="true">
+        app:liftOnScroll="true"
+        style="@style/ThemeOverlay.AppCompat.ActionBar">
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_view"
