edit user Updated

--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -60,6 +60,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -67,7 +68,7 @@
                     android:focusableInTouchMode="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/firstname"
+                        android:id="@+id/userfirstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
@@ -88,7 +89,7 @@
                     android:focusableInTouchMode="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/lastname"
+                        android:id="@+id/userlastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
@@ -155,7 +156,7 @@
                 android:focusableInTouchMode="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email"
+                    android:id="@+id/emailUser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
@@ -246,6 +247,7 @@
             </RadioGroup>
 
             <Button
+                android:id="@+id/saveUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
