--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -44,7 +44,12 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/searchrecyleview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:screenReaderFocusable="true"
+                android:scrollbarAlwaysDrawVerticalTrack="true"
+                android:scrollbarSize="10sp"
+                android:scrollbarStyle="insideInset"
+
+                android:layout_height="wrap_content"
                 android:alwaysDrawnWithCache="true" />
 
 
